# percival-notes-mcp

./: .gitignore  README.md  notes_mcp.py  pyproject.toml
tests/: test_advanced_features.py  test_notes_mcp.py
