[project]
name = "percival-notes-mcp"
version = "0.1.5"
description = "Percival MCP server for managing markdown notes with YAML frontmatter"
authors = [
    {name = "Edvard Lindelöf", email = "edvardlindelof@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
percival-notes-mcp = "notes_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["notes_mcp.py"]

[tool.hatch.build.targets.wheel]
only-include = ["notes_mcp.py"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
